--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,16 @@
 <html>
     <head>
         <link rel="favorite icon" href="./favicon.png" />
+        <link rel="stylesheet" href="/@codemirror/lib/codemirror.css" />
+        <link rel="stylesheet" href="/@codemirror/theme/material-ocean.css" />
+        <style>
+            .react-codemirror2 {
+                display: contents;
+            }
+            .CodeMirror {
+                flex: 1;
+            }
+        </style>
     </head>
     <body>
         <script></script>
